--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre8</version>
         </dependency>
         <dependency>
             <groupId>com.github.sabomichal</groupId>
